<resources>
    <string name="app_name">Noded</string>

    <string name="your_notebooks">Your Notebooks</string>
    <string name="notebook_title_hint">Notebook Title</string>
    <string name="note_title_hint">Title</string>
    <string name="body_note_hint">Note</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="no_account_yet_create_one">No Account yet? Create one</string>
    <string name="already_have_account">Already a member? Login</string>
    <string name="create_notebook_button">Create Notebook</string>
    <string name="create_notebook">Create Notebook</string>
    <string name="notebook_title">Notebook Title</string>
    <string name="title_hint">Title</string>
    <string name="note_hint">Note</string>
    <string name="your_notes">Your Notes</string>
    <string name="create_note">Create Note</string>
    <string name="color">Color</string>
    <string name="logout">Logout</string>
    <string name="logging_in">Logging in</string>
    <string name="creating_account">Creating Account</string>
    <string name="title_activity_settings">Settings</string>
    <string name="wiki_btn">Wiki</string>

    <!-- Preference Titles -->
    <string name="the_developers">The Developers</string>
    <string name="account">Account</string>

    <string name="ian_spryn">Ian Spryn</string>
    <string name="delete_account">Delete Account</string>
    <string name="mitchell_smith">Mitchell Smith</string>
    <string name="daniel_degraaf">Daniel DeGraaf</string>
    <string name="ian_description">UI designer, user account management, navigation logic, binding advocate, this very page, misc. dirty work</string>
    <string name="mitchell_description">Everything Firestore</string>
    <string name="daniel_description">Notebook boss, Wikipedia lover, binding activist</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
