<?xml version="1.0" encoding="utf-8"?>
<layout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/nodes"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:context=".screens.login.RegisterFragment">


        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="120dp"
            android:orientation="vertical">

            <TextView
                style="@style/AppTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/app_name" />


            <EditText
                android:id="@+id/name_input"
                style="@style/AccountInputField"
                android:autofillHints=""
                android:hint="@string/name"
                android:inputType="textCapWords"
                app:backgroundTint="@color/white" />

            <EditText
                android:id="@+id/email_input"
                style="@style/AccountInputField"
                android:autofillHints="emailAddress"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                app:backgroundTint="@color/white" />

            <EditText
                android:id="@+id/password_input"
                style="@style/AccountInputField"
                android:hint="@string/password"
                android:inputType="textPassword"
                app:backgroundTint="@color/white" />

            <Button
                android:id="@+id/register_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="20dp"
                android:text="@string/register" />
        </LinearLayout>
    </RelativeLayout>
</layout>