<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <RelativeLayout
                android:id="@+id/login_header_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/main_login_layout">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:gravity="center_horizontal">

                    <TextView
                        style="@style/AppTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name"
                        android:textAlignment="center" />

                </LinearLayout>

            </RelativeLayout>


            <LinearLayout
                android:id="@+id/main_login_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="vertical">


                <EditText
                    android:id="@+id/email_input"
                    style="@style/AccountInputField"
                    android:autofillHints="emailAddress"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    app:backgroundTint="@color/white" />

                <EditText
                    android:id="@+id/password_input"
                    style="@style/AccountInputField"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    app:backgroundTint="@color/white" />

                <Button
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="50dp"
                    android:background="@color/white"
                    android:padding="15dp"
                    android:shadowColor="@color/light_blue"
                    android:text="@string/login" />

                <TextView
                    android:id="@+id/create_account_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/no_account_yet_create_one"
                    android:textAlignment="center"
                    android:textColor="@color/white" />


            </LinearLayout>

            <RelativeLayout
                android:id="@+id/footerLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/main_login_layout"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_alignParentBottom="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true">

                    <com.google.android.gms.common.SignInButton
                        android:id="@+id/google_login"
                        android:padding="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="75dp"
                        android:layout_marginTop="50dp"
                        android:layout_marginRight="75dp" />
                </LinearLayout>

            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>
</layout>